ecmascript/parser/tests/test262-error-references/fail/d5834ae85b6636ef.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/d5834ae85b6636ef.js:1:10
  |
1 | var x, y,
  |          ^

